glyph-cell-macros/tests/ui/old_bitmap_fonts_removed_fail.rs
use glyph_cell::bitmap_fonts;

fn main() {
    let _ = bitmap_fonts;
}
